--- a/index.html
+++ b/index.html
@@ -6,96 +6,111 @@
     <title>Parc des Légendes PSG</title>
   </head>
   <body>
-    <img
-      src="images/logo-PSG.svg"
-      alt="Logo du PSG - Un rond bleu avec la tour eiffel en rouge au centre et le nom du club ecrit autour des bordures "
-      width="100"
-    />
-    <h1>Parc des Légendes PSG</h1>
-    <ul>
-      <li><a href="#attractions">Nos attractions</a></li>
-      <li><a href="#infos">Infos de base</a></li>
-    </ul>
-    <p>
-      Bienvenue au Parc des Légendes PSG, le premier parc à thème entièrement
-      dédié à l'histoire du <strong>Paris Saint-Germain</strong>. Situé aux
-      portes du Parc des Princes, vivez une expérience
-      <em
-        >immersive au cœur de 54 ans de passion, de victoires et de légendes du
-        football</em
-      >
-      .
-    </p>
-    <h2 id="attractions">Nos attractions principales</h2>
-    <ul>
-      <li>
-        <dl>
-          <dt>Le Vol de Zlatan :</dt>
-          <dd>
-            Vol en réalité virtuelle au-dessus du Parc des Princes avec
-            Ibrahimovic comme guide virtuel
-          </dd>
-        </dl>
-      </li>
-      <li>
-        <dl>
-          <dt>Le Labyrinthe de Ronaldinho :</dt>
-          <dd>
-            Parcours interactif où il faut reproduire les dribles les plus
-            célèbres du magicien brésilien
-          </dd>
-        </dl>
-      </li>
-      <li>
-        <dl>
-          <dt>Le Simulateur Mbappé :</dt>
-          <dd>
-            Course de vitesse en réalité augmentée, essayez de battre le record
-            de sprint de Kylian
-          </dd>
-        </dl>
-      </li>
-      <li>
-        <dl>
-          <dt>L'Exposition des Légendes :</dt>
-          <dd>
-            Galerie interactive avec les maillots, trophées et souvenirs des
-            plus grands moments du club
-          </dd>
-        </dl>
-      </li>
-      <li>
-        <dl>
-          <dt>Le Cinéma 4D "Remontada" :</dt>
-          <dd>
-            Revivez les plus grands matchs de l'histoire du PSG en 4D, du 6-1
-            contre Barcelone vu des tribunes
-          </dd>
-        </dl>
-      </li>
-    </ul>
-    <h2 id="infos">Les infos de base</h2>
-    <ul>
-      <li>
-        Adresse : 24 Rue du Commandant Guilbaud, 75016 Paris (juste à côté du
-        Parc des Princes)
-      </li>
-      <li>Horaires : Ouvert tous les jours de 10h à 20h (22h en été)</li>
-      <li>
-        Tarifs :
+    <header>
+      <img
+        src="images/logo-PSG.svg"
+        alt="Logo du PSG - Un rond bleu avec la tour eiffel en rouge au centre et le nom du club ecrit autour des bordures "
+        width="100"
+      />
+
+      <nav>
         <ul>
-          <li>Adulte 45€</li>
-          <li>Enfant (3-12 ans) 29€</li>
-          <li>Famille (2 adultes + 2 enfants) 130€</li>
+          <li><a href="#attractions">Nos attractions</a></li>
+          <li><a href="#infos">Infos de base</a></li>
+          <li><a href="tarifs.html">Tarifs</a></li>
         </ul>
-      </li>
-    </ul>
-    <p>
-      Vous pouvez aussi visitez le
-      <a href="https://www.psg.fr" target="_blank" rel="noopener noreferrer"
-        >Site officiel du PSG</a
-      >
-      pour plus d'informations.
-    </p>
+      </nav>
+    </header>
+    <main>
+      <h1>Parc des Légendes PSG</h1>
+      <p>
+        Bienvenue au Parc des Légendes PSG, le premier parc à thème entièrement
+        dédié à l'histoire du <strong>Paris Saint-Germain</strong>. Situé aux
+        portes du Parc des Princes, vivez une expérience
+        <em
+          >immersive au cœur de 54 ans de passion, de victoires et de légendes
+          du football</em
+        >
+        .
+      </p>
+      <section id="attractions">
+        <h2>Nos attractions principales</h2>
+        <ul>
+          <li>
+            <dl>
+              <dt>Le Vol de Zlatan :</dt>
+              <dd>
+                Vol en réalité virtuelle au-dessus du Parc des Princes avec
+                Ibrahimovic comme guide virtuel
+              </dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt>Le Labyrinthe de Ronaldinho :</dt>
+              <dd>
+                Parcours interactif où il faut reproduire les dribles les plus
+                célèbres du magicien brésilien
+              </dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt>Le Simulateur Mbappé :</dt>
+              <dd>
+                Course de vitesse en réalité augmentée, essayez de battre le
+                record de sprint de Kylian
+              </dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt>L'Exposition des Légendes :</dt>
+              <dd>
+                Galerie interactive avec les maillots, trophées et souvenirs des
+                plus grands moments du club
+              </dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt>Le Cinéma 4D "Remontada" :</dt>
+              <dd>
+                Revivez les plus grands matchs de l'histoire du PSG en 4D, du
+                6-1 contre Barcelone vu des tribunes
+              </dd>
+            </dl>
+          </li>
+        </ul>
+      </section>
+      <section id="infos">
+        <h2>Les infos de base</h2>
+        <ul>
+          <li>
+            Adresse : 24 Rue du Commandant Guilbaud, 75016 Paris (juste à côté
+            du Parc des Princes)
+          </li>
+          <li>Horaires : Ouvert tous les jours de 10h à 20h (22h en été)</li>
+          <li>
+            Tarifs :
+            <ul>
+              <li>Adulte 45€</li>
+              <li>Enfant (3-12 ans) 29€</li>
+              <li>Famille (2 adultes + 2 enfants) 130€</li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>
+        Vous pouvez aussi visitez le
+        <a href="https://www.psg.fr" target="_blank" rel="noopener noreferrer"
+          >Site officiel du PSG</a
+        >
+        pour plus d'informations.
+      </p>
+      <p>&copy; 2026 Parc des légendes</p>
+    </footer>
   </body>
 </html>
