Ajout de la page découvrir

--- a/tarifs.html
+++ b/tarifs.html
@@ -3,15 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parc des légendes - Tarifs</title>
+    <title>Parc des légendes PSG - Tarifs et Réservations</title>
+    <meta
+      name="description"
+      content="Consultez les tarifs du Parc des légendes et les options exclusives. Réservez votre visite dédiée à l’histoire du Paris Saint-Germain dès maintenant."
+    />
+    <meta name="author" content="Keliane Kossas" />
+    <meta
+      property="og:title"
+      content="Parc des légendes - Tarifs et Réservations"
+    />
+    <meta
+      property="og:description"
+      content="Consultez les tarifs du Parc des légendes et les options exclusives. Réservez votre visite dédiée à l’histoire du Paris Saint-Germain dès maintenant."
+    />
+    <meta property="og:type" content="website" />
+    <link rel="icon" href="image/logo-pdl.svg" />
   </head>
   <body>
+    <a href="#main-content" class="skip-link">Allez au contenu principal</a>
     <header>
+      <img
+        src="image/logo-pdl.webp"
+        alt="Logo du Parc des légendes - Une tour eiffet en bleu et rouge au centre avec des rails de montagnes russes de part et d'autres et le parc des légendes écrit juste en dessous "
+        width="200"
+      />
       <nav>
         <a href="index.html">Retour à l'Accueil</a>
       </nav>
     </header>
-    <main>
+    <main id="main-content">
       <h1>Nos différents tarifs</h1>
 
       <section id="grille-tarifaire">
@@ -172,7 +193,7 @@
       <p>
         Vous pouvez aussi visitez le
         <a href="https://www.psg.fr" target="_blank" rel="noopener noreferrer"
-          >Site officiel du PSG</a
+          >Site officiel du <abbr title="Paris Saint-Germain">PSG</abbr></a
         >
         pour plus d'informations.
       </p>
